--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,36 @@
-{{!-- Setup the index.handlebars to have the template that Handlebars can render onto.
+<h1>Welcome to Eat da Burger Restaurant!</h1>
 
-Create a button in index.handlebars that will submit the user input into the database. --}}
+<h2>Burgers Created:</h2>
+
+<form class='create-form' action='burgers/create' method='POST'>
+    <div class='form-group'>
+        <label for='addBurger'>Add new burger:</label>
+        <input type='text' id='addBurger' name='name'>
+    </div>
+    <button type='submit'>Submit</button>
+<h4>Enter a burger you want to eat then click the 'submit' button!</h4>
+</form>
+
+
+
+<h2>Burgers Devoured:</h2>
+
+<ul>
+    {{#each burgers}}
+    {{#if this.devoured}}
+    <li>
+        {{this.burger_name}}
+
+        <form action='burgers/update/{{this.id}}?_method=PUT' method='POST'>
+        <input type="hidden" name='devoured' value='false'>
+        <button type='submit' class='devourIt'>Devour it!</button>
+        </form>
+    </li>
+    {{/if}}
+    {{/each}}
+</ul>
+
+
+
+
+
