--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,8 +21,8 @@
 <body>
 
 
-    <div class="text-center">
-    <img src="public/assets/img/burger.jpg" class="rounded" alt="smiling burger">
+    <div class="text-center" id='burgerPic'>
+    <img src="../assets/img/burger.jpg" class="rounded" alt="smiling burger">
     </div>
 
 
