--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,19 +1,37 @@
-<h1>Welcome to Eat da Burger Restaurant!</h1>
+<br>
+<h1>Welcome to Eat Da Burger Restaurant!</h1>
 
-<h2>Burgers Created:</h2>
+<div class='container col-8 text-center'>
+    <form class='create-form' action='burgers/insertOne' method='POST'></form>
+    <div class="form-group">
+        <label for="addBurger"></label>
+        <textarea class="form-control" class='text-center' id="addBurger" rows="3" name='name'></textarea>
+        <br>
+        <h5 class="text-center">Create a burger you want to eat then click the 'submit' button!</h5>
+        <button type="submit" class="btn btn-success" id="create-burger" id='addBurger'>Submit</button>
 
-<form class='create-form' action='burgers/create' method='POST'>
-    <div class='form-group'>
-        <label for='addBurger'>Add new burger:</label>
-        <input type='text' id='addBurger' name='name'>
     </div>
-    <button type='submit'>Submit</button>
-<h4>Enter a burger you want to eat then click the 'submit' button!</h4>
-</form>
+
+    </form>
+</div>
+
+<div class='container'>
+<div class='row justify-content-md-center'>
+<div class="card newBurgerDiv" style="width: 18rem;">
+    <div class="card-header">
+       <h4>Burgers Created:</h4>
+    </div>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item"></li>
+    </ul>
+</div>
 
 
 
-<h2>Burgers Devoured:</h2>
+<div class="card devouredBurgerDiv" style="width: 18rem;">
+    <div class="card-header">
+<h4>Burgers Devoured:</h4>    
+    </div>
 
 <ul>
     {{#each burgers}}
@@ -21,16 +39,15 @@
     <li>
         {{this.burger_name}}
 
-        <form action='burgers/update/{{this.id}}?_method=PUT' method='POST'>
-        <input type="hidden" name='devoured' value='false'>
-        <button type='submit' class='devourIt'>Devour it!</button>
+        <form action='burgers/updateOne/{{this.id}}?_method=PUT' method='POST'>
+            <input type="hidden" name='devoured' value='false'>
+            <button type='submit' class='devourIt'>Devour it!</button>
         </form>
     </li>
     {{/if}}
     {{/each}}
 </ul>
 
-
-
-
-
+</div>
+</div>
+</div>
